# VirtualTouchScreen

./: CMakeLists.txt  ConfigDialog.cpp  ConfigDialog.h  Copyright.txt  GestureAlgos.cpp  GestureAlgos.h  GestureThread.cpp  GestureThread.h  README.md  TouchInputEmulator.cpp  TouchInputEmulator.h  VirtualTouchScreen.cpp  VirtualTouchScreen.h  VirtualTouchScreen.rc  configuration.ui  icons.qrc  main.cpp
icons/: index_finger.xcf  thumb_finger.xcf
tests/: CMakeLists.txt  unit_tests.cpp
